# rdu

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md
.cargo/: config.toml
crates/rdu-cli/: Cargo.toml
crates/rdu-cli/src/: main.rs
crates/rdu-lib/: Cargo.toml
crates/rdu-lib/src/: lib.rs  timefilter.rs
crates/rdu-lib/src/analyzer/: mod.rs  parallel.rs  progress.rs  sequential.rs
crates/rdu-lib/src/device/: mod.rs
crates/rdu-lib/src/export/: mod.rs
crates/rdu-lib/src/fs/: dir.rs  file.rs  item.rs  mod.rs  sorting.rs
crates/rdu-lib/src/ignore/: mod.rs
crates/rdu-lib/src/platform/: linux.rs  mod.rs  other.rs  windows.rs
crates/rdu-tui/: Cargo.toml
crates/rdu-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/rdu-tui/src/handlers/: actions.rs  keys.rs  mod.rs
tests/: integration_test.rs
